[package]
name = "ethereum_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
http = "0.2.8"
reqwest = { version = "0.11.12", features = ["blocking", "multipart",] }
serde_json = "1.0.85"
web3 = "0.17.0"
tokio = "1.21.2"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.24"
chrono = "0.4.22"
regex = "1.6.0"

# [dependencies.curl]
# git = "https://github.com/carllerche/curl-rust"
